--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style type="text/css">   
     body{
             height:3700px;
+            width:2000px;
             border: 8px solid black;
             background-color: rgb(154, 163, 85);
             background-color: cover;
