--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <ul style="list-style-type:none">
 
-        <hr><h1>ESSENTIALS OF MANAGEMENT SCIENCE </h1><hr>
+        <hr><h1>ESSENTIALS OF MANAGEMENT SCIENCE </h1><hr width="500px" color="black">
         <li><a href=https://drive.google.com/file/d/1IMItzK6Y2q24DsmTrn13E1DKZPDIyRX5/view?usp=drivesdk><h2>ALL UNITS (click here)</h2></a></li>
         <li><a href=https://docs.google.com/presentation/d/1Isu803tdLv9pzRdFlF32Va92A8Qlx3u5/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>DELEGATION OF AUTHORITY (click here)</h2></a></li>
     </ul>
@@ -191,7 +191,7 @@
 
     
     <ul style="list-style-type:none">
-       <hr> <h1>CLOUD COMPUTING</h1><hr>
+       <hr> <h1>CLOUD COMPUTING</h1><hr width="500px" color="black">
         <li><a href="https://docs.google.com/document/d/1J8lyKRPd2551BMQgtX8XZo4J_nYRrcuQ/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true"><h2>UNIT-1(click here)</h2></a></li>
         <li><h2>UNIT-2(clickhere)</h2></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
@@ -206,7 +206,7 @@
         <div class="big">
     
     <ul style="list-style-type:none">
-       <hr> <h1>BIG DATA ANALYTICS</h1><hr>
+       <hr> <h1>BIG DATA ANALYTICS</h1><hr width="500px" color="black">
         <li><a href =https://drive.google.com/file/d/1YZ5WQip0_EU8oEN3wELG6giyrqHnTTAj/view?usp=drivesdk><h2> UNIT-1 and UNIT-2(click here)</h2></a></li>
 
         <li><h2>UNIT-3(clickhere)</h2></li>
@@ -221,7 +221,7 @@
     <div class="sa">
 
     <ul style="list-style-type:none">
-       <hr> <h1>SOFTWARE ARCHITECTURE</h1><hr>
+       <hr> <h1>SOFTWARE ARCHITECTURE</h1><hr width="500px" color="black">
         <li><h2>UNIT-1(clickhere)</h2></li>
         <li><h2>UNIT-2(clickhere)</h2></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
@@ -235,7 +235,7 @@
         <div class="es">
    
     <ul style="list-style-type:NONE">
-     <hr>   <h1>EMBEDDED SYSTEM</h1><hr>
+     <hr>   <h1>EMBEDDED SYSTEM</h1><hr width="500px" color="black">
         <li><a href=https://docs.google.com/document/d/1J8lyKRPd2551BMQgtX8XZo4J_nYRrcuQ/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>UNIT-1 (click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1YVjJEDaUhlacA4ir5CWpTJJzDlDmNYgI/view?usp=drivesdk><h2>UNIT-1 (second part)(clickhere)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yclgmy4xUKKJQ-2H63kBRdl9JU6Dsge8/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
