--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <div class="container">
     <div class="tcp">
     <ul style="list-style-type:none">
-       <hr> <h1>TCP/IP</h1><hr>
+       <hr> <h1>TCP/IP</h1><hr width="200px" color="black">
         
         <li><a href=https://drive.google.com/file/d/1Ipp8tlziB_NysTdzPiL3EQmFs3Zh2MYM/view?usp=drivesdk><h2>UNIT-1(click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1InzHZIO9JlJ09fHxxhBgffsIk-x6063P/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
@@ -266,7 +266,7 @@
     <div class="container">
         <div class="net">
     <ul style="list-style-type:none">
-      <hr>  <h1>C# AND .NET</h1><hr>
+      <hr>  <h1>C# AND .NET</h1><hr width="500px" color="black">
         <li><h2>UNIT-1(clickhere)</h2></li>
         <li><h2>UNIT-2(clickhere)</h2></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
@@ -282,7 +282,7 @@
     <div class="container">
         <div class="pe">
     <ul style="list-style-type:none">
-       <hr> <h1>PROFESSIONAL ETHICS</h1><hr>
+       <hr> <h1>PROFESSIONAL ETHICS</h1><hr width="500px" color="black">
         <li><h2>UNIT-1(clickhere)</h2></li>
         <li><h2>UNIT-2(clickhere)</h2></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
@@ -312,7 +312,7 @@
     <div class="container">
         <div class="lab">
     <ul style="list-style-type:none">
-      <hr>  <h1>C# AND .NET LAB</h1><hr>
+      <hr>  <h1>C# AND .NET LAB</h1><hr width="500px" color="black">
 
         <li><a href=https://drive.google.com/file/d/1YVjJEDaUhlacA4ir5CWpTJJzDlDmNYgI/view?usp=drivesdk><h2>c# LAB MANUAL(click here)</h2></a>
             
