--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
    
     <ul style="list-style-type:NONE">
      <hr color="black">   <h1>EMBEDDED SYSTEM</h1><hr width="500px" color="black">
-        <li><a href=https://docs.google.com/document/d/1J8lyKRPd2551BMQgtX8XZo4J_nYRrcuQ/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>UNIT-1 (click here)</h2></a></li>
-        <li><a href=https://drive.google.com/file/d/1YVjJEDaUhlacA4ir5CWpTJJzDlDmNYgI/view?usp=drivesdk><h2>UNIT-1 (second part)(clickhere)</h2></a></li>
+        <li><a href=https://drive.google.com/file/d/1JPMEJm8QUEYOFFnBWW4KL4-7Xk3fLil1/view?usp=drivesdk><h2>UNIT-1 (click here)</h2></a></li>
+        <li><a href=https://drive.google.com/file/d/1Yaiv12wuAE8TjLtpdHPU6kN1KxEe6lqN/view?usp=drivesdk><h2>UNIT-1 (second part)(clickhere)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yclgmy4xUKKJQ-2H63kBRdl9JU6Dsge8/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
         <li><h2>UNIT-4(clickhere)</h2></li>
