--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document creted by vadde babu</title>
+    <title>Document created by vadde babu</title>
     <style type="text/css">   
     body{
             height:3700px;
