--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
     <ul style="list-style-type:none">
        <hr color="black"> <h1>CLOUD COMPUTING</h1><hr width="500px" color="black">
         <li><a href="https://docs.google.com/document/d/1J8lyKRPd2551BMQgtX8XZo4J_nYRrcuQ/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true"><h2>UNIT-1(click here)</h2></a></li>
-        <li><h2>UNIT-2(clickhere)</h2></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-2(available soon)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
     </ul>
     </div>
@@ -218,9 +218,9 @@
        <hr color="black"> <h1>BIG DATA ANALYTICS</h1><hr width="500px" color="black">
         <li><a href =https://drive.google.com/file/d/1YZ5WQip0_EU8oEN3wELG6giyrqHnTTAj/view?usp=drivesdk><h2> UNIT-1 and UNIT-2(click here)</h2></a></li>
 
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
      </ul>
   </div>
@@ -231,11 +231,11 @@
 
     <ul style="list-style-type:none">
        <hr color="black"> <h1>SOFTWARE ARCHITECTURE</h1><hr width="500px" color="black">
-        <li><h2>UNIT-1(clickhere)</h2></li>
-        <li><h2>UNIT-2(clickhere)</h2></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-1(available soon)</h2></li>
+        <li><h2>UNIT-2(available soon)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
     </ul>
 </div></div></center>
@@ -248,9 +248,9 @@
         <li><a href=https://drive.google.com/file/d/1JPMEJm8QUEYOFFnBWW4KL4-7Xk3fLil1/view?usp=drivesdk><h2>UNIT-1 (click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yaiv12wuAE8TjLtpdHPU6kN1KxEe6lqN/view?usp=drivesdk><h2>UNIT-1 (second part)(clickhere)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yclgmy4xUKKJQ-2H63kBRdl9JU6Dsge8/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
     </ul>
 </div>
@@ -265,8 +265,8 @@
         <li><a href=https://drive.google.com/file/d/1Ipp8tlziB_NysTdzPiL3EQmFs3Zh2MYM/view?usp=drivesdk><h2>UNIT-1(click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1InzHZIO9JlJ09fHxxhBgffsIk-x6063P/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
         <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-4(available soon )</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 </div>
 </div>
 </ul>
@@ -276,11 +276,11 @@
         <div class="net">
     <ul style="list-style-type:none">
       <hr color="black">  <h1>C# AND .NET</h1><hr width="500px" color="black">
-        <li><h2>UNIT-1(clickhere)</h2></li>
-        <li><h2>UNIT-2(clickhere)</h2></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-1(available soon)</h2></li>
+        <li><h2>UNIT-2(available soon)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
         
 
     </ul>
@@ -292,11 +292,11 @@
         <div class="pe">
     <ul style="list-style-type:none">
        <hr color="black"> <h1>PROFESSIONAL ETHICS</h1><hr width="500px" color="black">
-        <li><h2>UNIT-1(clickhere)</h2></li>
-        <li><h2>UNIT-2(clickhere)</h2></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-1(available soon)</h2></li>
+        <li><h2>UNIT-2(available soon)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
     </ul>
 </div>
@@ -307,11 +307,11 @@
         <div class="pb">
     <ul style="list-style-type:none">
       <hr color="black">  <h1>PROFESSIONAL BODIES</h1><hr>
-        <li><h2>UNIT-1(clickhere)</h2></li>
-        <li><h2>UNIT-2(clickhere)</h2></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
-        <li><h2>UNIT-4(clickhere)</h2></li>
-        <li><h2>UNIT-5(clickhere)</h2></li>
+        <li><h2>UNIT-1(available soon)</h2></li>
+        <li><h2>UNIT-2(available soon)</h2></li>
+        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><h2>UNIT-4(available soon)</h2></li>
+        <li><h2>UNIT-5(available soon)</h2></li>
 
     </ul>
 </div>
