--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div class="container">
         <div class="pb">
     <ul style="list-style-type:none">
-      <hr color="black">  <h1>PROFESSIONAL BODIES</h1><hr>
+      <hr color="black">  <h1>PROFESSIONAL BODIES</h1><hr width="400px" color="black">
         <li><h2>UNIT-1(available soon)</h2></li>
         <li><h2>UNIT-2(available soon)</h2></li>
         <li><h2>UNIT-3(available soon)</h2></li>
