--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         <hr color="black"><h1>ESSENTIALS OF MANAGEMENT SCIENCE </h1><hr width="500px" color="black">
         <li><a href=https://drive.google.com/file/d/1IMItzK6Y2q24DsmTrn13E1DKZPDIyRX5/view?usp=drivesdk><h2>ALL UNITS (click here)</h2></a></li>
         <li><a href=https://docs.google.com/presentation/d/1Isu803tdLv9pzRdFlF32Va92A8Qlx3u5/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>DELEGATION OF AUTHORITY (click here)</h2></a></li>
+        <li><h2>MID-1 QPAPER</h2></li>
     </ul>
     </div>
     </div></center>
@@ -206,6 +207,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
+        <li><h2>MID-1 QPAPER</h2></li>
 
     </ul>
     </div>
@@ -221,6 +223,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
+         <li><h2>MID-1 QPAPER</h2></li>
 
      </ul>
   </div>
@@ -236,7 +239,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-
+         <li><h2>MID-1 QPAPER</h2></li>
     </ul>
 </div></div></center>
 <center>
