--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             background-size:contain;
         }
         .es{
-            height:390px;
+            height:420px;
             width:1800px;
             border:2 px solid red;
             background-image:url(es.jpeg);
@@ -190,7 +190,7 @@
         <hr color="black"><h1>ESSENTIALS OF MANAGEMENT SCIENCE </h1><hr width="500px" color="black">
         <li><a href=https://drive.google.com/file/d/1IMItzK6Y2q24DsmTrn13E1DKZPDIyRX5/view?usp=drivesdk><h2>ALL UNITS (click here)</h2></a></li>
         <li><a href=https://docs.google.com/presentation/d/1Isu803tdLv9pzRdFlF32Va92A8Qlx3u5/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>DELEGATION OF AUTHORITY (click here)</h2></a></li>
-        <li><h2>MID-1 QPAPER</h2></li>
+        <li><a href:https://drive.google.com/file/d/1uvg5TMVP87CN2SEj5zPSvhDIoxbEhyfO/view?usp=drivesdk><h2>MID-1 QPAPER(click here)</h2></a></li>
     </ul>
     </div>
     </div></center>
@@ -270,6 +270,8 @@
         <li><h2>UNIT-3(clickhere)</h2></li>
         <li><h2>UNIT-4(available soon )</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
+         <li><h2>MID-1 QPAPER</h2></li>
+        
 </div>
 </div>
 </ul>
