--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             background-size:contain;
         }
         .es{
-            height:420px;
+            height:450px;
             width:1800px;
             border:2 px solid red;
             background-image:url(es.jpeg);
@@ -254,6 +254,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
+         <li><h2>MID-1 QPAPER</h2></li>
 
     </ul>
 </div>
