--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             background-size: 300px;
             background-color: rgb(110, 165, 105);
             background-size:contain;
-            background-position:0PX;
+            background-position:-15PX;
 
         }
         .lab{
@@ -207,7 +207,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-        <li><h2>MID-1 QPAPER</h2></li>
+        <li><a href=https://drive.google.com/file/d/1xBZT3aP7EnNckdH9IrCeu59moroIHrBG/view?usp=drivesdk><h2>MID-1 QPAPER</h2</a></li>
 
     </ul>
     </div>
@@ -223,7 +223,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-         <li><h2>MID-1 QPAPER</h2></li>
+         <li><a href=https://drive.google.com/file/d/1x6d9-__eXaUjfS1Pz47_oxs4HQFSgKy0/view?usp=drivesdk><h2>MID-1 QPAPER</h2></a></li>
 
      </ul>
   </div>
@@ -239,7 +239,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-         <li><h2>MID-1 QPAPER</h2></li>
+         <li><a href=https://drive.google.com/file/d/1xHjIBxgc68DG24vqRlQ8SdPBf0Iut3qY/view?usp=drivesdk><h2>MID-1 QPAPER</h2></a></li>
     </ul>
 </div></div></center>
 <center>
@@ -254,7 +254,7 @@
         <li><h2>UNIT-3(available soon)</h2></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-         <li><h2>MID-1 QPAPER</h2></li>
+         <li><a href=https://drive.google.com/file/d/1x6d9-__eXaUjfS1Pz47_oxs4HQFSgKy0/view?usp=drivesdk><h2>MID-1 QPAPER</h2></a></li>
 
     </ul>
 </div>
@@ -271,7 +271,7 @@
         <li><h2>UNIT-3(clickhere)</h2></li>
         <li><h2>UNIT-4(available soon )</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-         <li><h2>MID-1 QPAPER</h2></li>
+         <li><a href=<h2>MID-1 QPAPER</h2></li>
         
 </div>
 </div>
