--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             background-position: absolute;
             background-size: 300px;
             background-color: rgb(207, 139, 161);
-            background-position:0px ;
+            background-position:20px ;
             background-size:contain;
         }
         
@@ -149,7 +149,7 @@
             background-size: 300px;
             background-color: rgb(110, 165, 105);
             background-size:contain;
-            background-position:-15PX;
+            background-position:-30PX;
 
         }
         .lab{
@@ -271,7 +271,7 @@
         <li><h2>UNIT-3(clickhere)</h2></li>
         <li><h2>UNIT-4(available soon )</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
-         <li><a href=<h2>MID-1 QPAPER</h2></a></li>
+         <li><h2>MID-1 QPAPER</h2></li>
         
 </div>
 </div>
