--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             background-size: 300px;
             background-color: rgb(110, 165, 105);
             background-size:contain;
-            background-position:-30PX;
+            background-position:-40PX;
 
         }
         .lab{
@@ -251,7 +251,7 @@
         <li><a href=https://drive.google.com/file/d/1JPMEJm8QUEYOFFnBWW4KL4-7Xk3fLil1/view?usp=drivesdk><h2>UNIT-1 (click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yaiv12wuAE8TjLtpdHPU6kN1KxEe6lqN/view?usp=drivesdk><h2>UNIT-1 (second part)(clickhere)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1Yclgmy4xUKKJQ-2H63kBRdl9JU6Dsge8/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
-        <li><h2>UNIT-3(available soon)</h2></li>
+        <li><a href=https://drive.google.com/file/d/1zEJZqjP6z_C-dYLpub0Hz1p_DODGBud4/view?usp=drivesdk><h2>UNIT-3(click here)</h2></a></li>
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
          <li><a href=https://drive.google.com/file/d/1x6d9-__eXaUjfS1Pz47_oxs4HQFSgKy0/view?usp=drivesdk><h2>MID-1 QPAPER</h2></a></li>
@@ -268,7 +268,7 @@
         
         <li><a href=https://drive.google.com/file/d/1Ipp8tlziB_NysTdzPiL3EQmFs3Zh2MYM/view?usp=drivesdk><h2>UNIT-1(click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1InzHZIO9JlJ09fHxxhBgffsIk-x6063P/view?usp=drivesdk><h2>UNIT-2(click here)</h2></a></li>
-        <li><h2>UNIT-3(clickhere)</h2></li>
+        <li><a href=https://docs.google.com/spreadsheets/d/1-BLXX6KTDZr1LkQ1a_2F2z_YDOzm72jc/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>UNIT-3(clickhere)</h2></a></li>
         <li><h2>UNIT-4(available soon )</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
          <li><h2>MID-1 QPAPER</h2></li>
