--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
         <li><a href=https://drive.google.com/file/d/1IMItzK6Y2q24DsmTrn13E1DKZPDIyRX5/view?usp=drivesdk><h2>ALL UNITS (click here)</h2></a></li>
         <li><a href=https://docs.google.com/presentation/d/1Isu803tdLv9pzRdFlF32Va92A8Qlx3u5/edit?usp=drivesdk&ouid=112636321057765772242&rtpof=true&sd=true><h2>DELEGATION OF AUTHORITY (click here)</h2></a></li>
         <li><a href=https://drive.google.com/file/d/1uvg5TMVP87CN2SEj5zPSvhDIoxbEhyfO/view?usp=drivesdk><h2>MID-1 QPAPER(click here)</h2></a></li>
+         <li><a href=https://docs.google.com/document/d/17QWCCB1mVyFfUokI7Gn0Bft00kSirTmZmq_b9CYTFGY/edit?usp=drivesdk><h2>important links (click here)</h2></a></li>
     </ul>
     </div>
     </div></center>
