--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
         <li><a href=https://drive.google.com/file/d/1xBZT3aP7EnNckdH9IrCeu59moroIHrBG/view?usp=drivesdk><h2>MID-1 QPAPER</h2</a></li>
+        <li><a href=https://docs.google.com/document/d/17QWCCB1mVyFfUokI7Gn0Bft00kSirTmZmq_b9CYTFGY/edit?usp=drivesdk><h2>important links (click here)</h2></a></li>
 
     </ul>
     </div>
