--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            
         }
         .cls{
-            height:380px;
+            height:420px;
             width:1800px;
             border:2 px solid red;
             background-image:url(4-Pillars-of-Cloud-Computing-1.jpg);
@@ -209,7 +209,7 @@
         <li><h2>UNIT-4(available soon)</h2></li>
         <li><h2>UNIT-5(available soon)</h2></li>
         <li><a href=https://drive.google.com/file/d/1xBZT3aP7EnNckdH9IrCeu59moroIHrBG/view?usp=drivesdk><h2>MID-1 QPAPER</h2</a></li>
-        <li><a href=https://docs.google.com/document/d/17QWCCB1mVyFfUokI7Gn0Bft00kSirTmZmq_b9CYTFGY/edit?usp=drivesdk><h2>important links (click here)</h2></a></li>
+        <li><a href=https://docs.google.com/document/d/17QWCCB1mVyFfUokI7Gn0Bft00kSirTmZmq_b9CYTFGY/edit?usp=drivesdk><h2>IMPORTANT  links (click here)</h2></a></li>
 
     </ul>
     </div>
