--- a/index.html
+++ b/index.html
@@ -344,6 +344,16 @@
         
         </ul>
     </footer>
+            <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0XE923K1P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W0XE923K1P');
+</script>
+
 
 </body>
 </html>
